fixed routers and controllers
